feat: exercicios novos